# jeu-de-la-vie

./: Life.py  README.md  TEST_life_classic.py  game_mode.md  optimisation_matricielle.md  optimisation_web.md  pyproject.toml  utils_grid.py  utils_life_rules.py  utils_rendering.py
Docs/: optimisation_matricielle.md
Docs/Forms/: B3-S23_oscillators.json  B3-S23_spaceships.json  B3-S23_still-lifes.json  bell_one.csv  bell_two.csv
