[project]
name = "jeu-de-la-vie"
version = "0.1.0"
description = "Jeu de la vie destiné à l'apprentissage d'optimisation matricielle et de l'application d'algorithme IA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "streamlit>=1.48.1",
    "streamlit-webrtc>=0.63.4",
]
